failing unit test fixed